# deepseek-foretell

./: .env.example  .gitignore  .pre-commit-config.yaml  Foretell产品.md  README.md  langgraph.json  main.py  pyproject.toml  skills-lock.json  配置.md
.cursor/: mcp.json
.cursor/agents/: analyst.md  brainstormer.md  path-explorer-agent.md  planner.md  requirement-analyst-agent.md  review-agent.md  reviewer.md  route-explorer.md  tester.md
.cursor/rules/: 00-core.mdc  prompt-design.mdc
.firecrawl/: langchain-mcp.md  minimax-api.md  studio.md
.github/workflows/: ci.yml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
.task-force/: plan.md  requirements.md  tasks.json
api/: auth.py  main.py  schemas.py  streaming.py  threads.py
config/: __init__.py  llm.py  settings.py
data/eval/: .gitignore  answer_playbooks.yaml  answer_playbooks_full_120.yaml  batch_AX_v3_summary.md  batch_A_summary.md  batch_BC_summary.md  batch_BC_v3_summary.md  batch_DE_summary.md  batch_DE_v3_summary.md  batch_FG_summary.md  batch_FG_v3_summary.md  batch_H_summary.md  batch_H_v3_summary.md  batch_X_summary.md  classification_stats.json  coverage_report.json  (+29 more)
docs/: DEVELOPMENT.md
feedback/: 2026-6-30存在的问题  d  回答质量反馈.md  纳米数据接口文档.md
foretell/: AGENTS.md  __init__.py  agent.py  backends.py  conversation_log.py  middleware.py  prompts.py  studio.py
frontend/: .env.local.example  README.md  package.json  pnpm-lock.yaml
scripts/: _gen_taxonomy.py  _v3_probe.py  audit_eval_accuracy.py  build_eval_dataset.py  build_eval_explorer.py  build_route_gaps_summary.py  classify_questions.py  dev.bat  dev.ps1  dev.sh  eval_checkpointer_demo.py  eval_common.py  eval_explorer_template.html  explore_routes.py  export_p0_test_cases.py  export_probe_cases.py  extract_session_questions.py  fetch_nami_docs.py  foretell_eval_helper.py  generate_atomic_decompositions_batch.py  llm_eval_common.py  llm_eval_decision.py  llm_eval_review.py  merge_route_matrix.py  phase1_supplement_diagnose.py  phase2a_lottery_diagnose.py  probe_basketball_deep_tables.py  probe_mysql.py  probe_portugal_wc.py  probe_route.py  redact_config_secrets.py  route_expected.py  route_probe_registry.py  run_agent_eval_stats.py  run_eval_pipeline_v2.py  run_llm_eval_full.py  run_llm_eval_phase1.py  run_probe_all.py  spot_check_dataset.py  summarize_v3.py
tests/: conftest.py
(+556 files in other folders)
