[project]
name = "learnlangchain"
version = "0.1.0"
description = "Foretell — Deep Agents 深度研究与趋势研判智能体"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "deepagents>=0.6.11",
    "langchain-openai>=1.3.2",
    "tavily-python>=0.7.26",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pytest>=8.0.0",
    "httpx>=0.28.0",
    "pymysql>=1.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
prod = [
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary,pool]>=3.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config", "foretell", "api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
